--- a/local.env
+++ b/local.env
@@ -1,5 +1,5 @@
 JDBC_DATABASE_URL=jdbc:mysql://localhost:3306/luxstay
 JDBC_DATABASE_USERNAME=root
-JDBC_DATABASE_PASSWORD=5436593
+JDBC_DATABASE_PASSWORD=12345a@A
 JDBC_DATABASE_DRIVER=com.mysql.cj.jdbc.Driver
 SPRING_JPA_HIBERNATE_DIALECT=org.hibernate.dialect.MySQL5Dialect
